--- a/public/css/plugins/apps.css
+++ b/public/css/plugins/apps.css
@@ -1007,13 +1007,11 @@ td {
   padding: 7px 2px !important;
 }
 
-#depo-logo,
 #sign-logo {
   opacity: 1 !important;
   margin: 5px;
   border-radius: 0px !important;
 }
-#depo-logo img,
 #sign-logo img {
   opacity: 1 !important;
   border: none !important;
@@ -1050,7 +1048,6 @@ td {
       margin: -8px 0px !important;
   }
 
-  #depo-logo img,
   #sign-logo img {
     width: 57px !important;
     height: 57px !important;
@@ -1531,14 +1528,12 @@ td {
   font-size: 25px !important;
 }
 #saveModal .modal-dialog,
-#emailModal .modal-dialog,
 #exampleModal .modal-dialog,
 #vpnModal .modal-dialog {
   top: 7vh !important;
 }
 @media screen and (min-width: 1370px) {
   #saveModal .modal-dialog,
-  #emailModal .modal-dialog,
   #exampleModal .modal-dialog,
   #vpnModal .modal-dialog {
       top: 11vh !important;
@@ -1547,7 +1542,6 @@ td {
 @media screen and (max-width: 1025px) {
   #saveModal .modal-dialog,
   #exampleModal .modal-dialog,
-  #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
       top: 20vh !important;
       max-width: 40vw !important;
@@ -1556,7 +1550,6 @@ td {
 @media screen and (max-width: 825px) {
   #saveModal .modal-dialog,
   #exampleModal .modal-dialog,
-  #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
       top: 20vh !important;
       max-width: 50vw !important;
@@ -1566,7 +1559,6 @@ td {
 @media screen and (max-width: 570px) {
   #saveModal .modal-dialog,
   #exampleModal .modal-dialog,
-  #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
       top: 15vh !important;
       max-width: 81.3vw !important;
@@ -1575,7 +1567,6 @@ td {
 @media screen and (max-width: 420px) {
   #saveModal .modal-dialog,
   #exampleModal .modal-dialog,
-  #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
       top: 15vh !important;
       max-width: 84.5vw !important;
@@ -1586,7 +1577,6 @@ td {
 @media screen and (max-width: 376px) {
   #saveModal .modal-dialog,
   #exampleModal .modal-dialog,
-  #emailModal .modal-dialog,
   #vpnModal .modal-dialog {
       top: 15vh !important;
       max-width: 88vw !important;
@@ -1598,14 +1588,12 @@ td {
 }
 
 #vpnModal .modal-dialog,
-#emailModal .modal-dialog,
 #saveModal .modal-dialog,
 #exampleModal .modal-dialog {
   background: transparent !important;
 }
 
 #vpnModal .modal-header,
-#emailModal .modal-header,
 #saveModal .modal-header,
 #exampleModal .modal-header {
   margin: 2px;
@@ -1615,7 +1603,6 @@ td {
 
 
 #vpnModal .modal-header img,
-#emailModal .modal-header img,
 #saveModal .modal-header img,
 #exampleModal .modal-header img {
   width: 70px;
@@ -1623,7 +1610,6 @@ td {
 
 
 #vpnModal .modal-header h4.modal-title,
-#emailModal .modal-header h4.modal-title,
 #saveModal .modal-header h4.modal-title,
 #exampleModal .modal-header h4.modal-title {
   font-weight: 600;
@@ -1639,7 +1625,6 @@ td {
 }
 
 #vpnModal .modal-footer,
-#emailModal .modal-footer,
 #saveModal .modal-footer,
 #exampleModal .modal-footer {
   margin: 4px;
@@ -1649,7 +1634,6 @@ td {
 
 #vpnModal .modal-body,
 #saveModal .modal-body,
-#emailModal .modal-body,
 #exampleModal .modal-body {
   margin: 0;
   padding: 0;
@@ -1657,7 +1641,6 @@ td {
 }
 
 #saveModal .modal-backdrop div p,
-#emailModal .modal-backdrop div p,
 #exampleModal .modal-backdrop div p {
   background: transparent !important;
 }
@@ -1987,15 +1970,12 @@ td {
   cursor: pointer !important;
 }
 #settings {
-  position: absolute;
   white-space: nowrap;
-  left: 24%;
-  right: 24%;
   margin: 10px auto !important;
   font-size: 24px !important;
   opacity: 1 !important;
   letter-spacing: 1.5px !important;
-  padding: 9px 0 !important;
+  padding: 9px 10px !important;
   cursor: pointer !important;
 }
 #settings img {
@@ -2015,14 +1995,15 @@ td {
 }
 .ticketz label,
 #vpnModal label {
-  font-size: 17.5px !important;
-  margin-top: 14px !important;
+  font-size: 18px !important;
+  margin-top: 15px !important;
   margin-bottom: 8px !important;
 }
 .modal-body#first-modal {
   border-bottom: none !important;
   padding: 10px 1px !important;
   height: 85px !important; 
+  text-align: center !important;
 }
 @media screen and (max-width: 506px) {
   #settings {
@@ -2030,7 +2011,7 @@ td {
   }
   .ticketz label,
   #vpnModal label {
-    font-size: 17px !important;
+    font-size: 17.5px !important;
     margin-top: 10px !important;
     margin-bottom: 6px !important;
   }
@@ -2440,8 +2421,6 @@ ul.countdown li p {
 }
 #dave-1, 
 #dave-2,
-#depo-1,
-#depo-2,
 #save-1, 
 #save-2 {
   font-size: 21.2px !important;
@@ -2457,8 +2436,6 @@ ul.countdown li p {
 @media screen and (min-width: 1370px) {
   #dave-1,
   #dave-2,
-  #depo-1,
-  #depo-2,
   #save-1, 
   #save-2 {
       font-size: 22px !important;
@@ -2478,8 +2455,6 @@ ul.countdown li p {
   }
   #dave-1,
   #dave-2,
-  #depo-1,
-  #depo-2,
   #save-1, 
   #save-2 {
       font-size: 20.2px !important;
@@ -2511,8 +2486,6 @@ ul.countdown li p {
   }
   #dave-1,
   #dave-2,
-  #depo-1,
-  #depo-2,
   #save-1, 
   #save-2 {
       font-size: 19.7px !important;
@@ -2525,8 +2498,6 @@ ul.countdown li p {
   }
   #dave-1,
   #dave-2,
-  #depo-1,
-  #depo-2,
   #save-1, 
   #save-2 {
       font-size: 19.2px !important;
@@ -2556,9 +2527,7 @@ ul.countdown li p {
   width: 20px !important;
   height: 20px !important;
 }
-#depo-life,
 #code-life,
-#save-life,
 #the-life {
   display: flex !important;
   width: 93.4% !important;
@@ -2568,16 +2537,13 @@ ul.countdown li p {
   background: rgba(255, 255, 255, 0.7) !important;
   border-radius: 0.3px !important;
 }
-#depo-flag7,
-#save-flag7,
+
 #the-flag7 {
   width: 16.4%;
   border: none !important;
   height: 90% !important;
   margin: auto 7px !important;
 }
-#depoLife,
-#saveLife,
 #code,
 #inputLife {
   border-radius: 0.1px !important;
@@ -2592,27 +2558,17 @@ ul.countdown li p {
   align-items: center !important;
   font-size: 22.3px !important;
 }
-#depoLife {
-  padding: 0 1px 0 10px !important;
-  letter-spacing: 2px !important;
-}
+
 #code::placeholder,
 #inputLife::placeholder {
   letter-spacing: 1.1px !important;
 }
-#depoLife::placeholder {
-  letter-spacing: 1.7px !important;
-}
+
 @media screen and (max-width: 767px) {
   #code::placeholder,
   #inputLife::placeholder {
       letter-spacing: 0.7px !important;
   }
-  #depoLife::placeholder {
-    letter-spacing: 1px !important;
-  }
-  #depoLife,
-  #saveLife,
   #code,
   #inputLife {
       padding: 0 7px !important;
@@ -2620,9 +2576,6 @@ ul.countdown li p {
       align-items: center !important;
       font-size: 21.3px !important;
       height: 95% !important;
-  }
-  #depoLife {
-    padding: 0 1px 0 3px !important;
   }
 }
 
@@ -2918,10 +2871,6 @@ button.toast-close-button {
 
 
 
-
-
-
-#confirm-depo,
 #signInWithPhone,
 #email-phone {
   margin-top: 13px !important;
@@ -3001,7 +2950,6 @@ button.toast-close-button {
   opacity: 0.5 !important;
 }
 
-#deposit-type,
 #invoice-type {
   text-transform: uppercase !important;
   letter-spacing: 1.25px;
@@ -3009,7 +2957,6 @@ button.toast-close-button {
   white-space: nowrap !important;
   overflow: hidden !important;
 }
-#deposit-type::after,
 #invoice-type::after {
   opacity: 0.7 !important;
 }
