--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -6,12 +6,12 @@
 
 #logs-invoice {
     padding: 0px 10px !important;
-    height: 97vh !important;
+    height: 110vh !important;
 }
 @media screen and (max-width: 821px) {
     #logs-invoice {
         padding: 0px 10px !important;
-        height: 75vh !important;
+        height: 92vh !important;
     }
 }
 
@@ -170,7 +170,7 @@
       padding: 0 7px !important;
       letter-spacing: 2px !important;
       align-items: center !important;
-      font-size: 22px !important;
+      font-size: 22.5px !important;
       height: 95% !important;
   }
 }
@@ -178,7 +178,7 @@
 
 #the-life {
     display: flex !important;
-    width: 90% !important;
+    width: 91% !important;
     height: 58px !important;
     margin: 10px auto -10px !important;
   
@@ -207,6 +207,8 @@
 }
 #email-phone img {
     border-radius: 0 !important;
+    height: 33px !important;
+    width: 33px !important;
 }
 
 @media screen and (max-width: 767px) {
@@ -219,3 +221,12 @@
         letter-spacing: 1.5px !important;  
     }
 }
+
+@media screen and (max-width: 821px) {
+    #clients {
+        position: fixed !important;
+        bottom: 3px !important;
+    }
+}
+
+
