--- a/public/css/plugins/login.css
+++ b/public/css/plugins/login.css
@@ -1,271 +1,231 @@
-@media screen and (max-width: 1026px) {
-    .col-12 {
-        margin-bottom: 21px;
-    }
-}
-
-.thecont{
-	margin-top: 80px;
-    margin-bottom: 0;
-}
-.therow {
-	margin: 100px -15px 0 -15px;
-}
-@media screen and (max-width: 1026px) {
-	.thecont{
-		margin-top: 90px;
-	}
-	.therow {
-		margin: 0 -20px 0 -20px;
-	}
-}
-
 .bg-animate{
     background-position:0 0;
     background-repeat:repeat-x;
-    animation:animatedBackground 140s linear infinite
-}
-@keyframes animatedBackground{
-    from{
-        background-position:0 0
-    }
-    to{
-        background-position:100% 0
-    }
-}
-.btn-close {
-	margin-top: -3px !important;
+    animation:animatedBackground 70s linear infinite 
 }
 
-#modalsend .brock {
-	background: rgba(18, 29, 51, 0.5) !important;
-}
-
-@media screen and (min-width: 996px) {
-  .col-lg-3 {
-    max-width: 20.3% !important;
-  }
-}
-@media screen and (max-width: 591px){
-  .col-55 {
-    -ms-flex: 0 0 42%;
-    flex: 0 0 42%;
-    max-width: 42%;
-    margin: 3.5% auto !important;
-}
-}
-@media (min-width: 767px) {
-  .col-md-65 {
-    -ms-flex: 0 0 40%;
-    flex: 0 0 40%;
-    max-width: 40%;
-    margin: 3% auto !important;
-  }
-}
-
-.bro {
-  display: block !important;
-  position: relative !important;
-}
-.bro-text{
-  background: rgba(18, 29, 51, 0.85) !important;
-  inset: 13px !important;
-  border-radius: 2px !important;
-  opacity: 0.2 !important;
-  transition-duration:.7s !important;
-  border: 1.4px solid rgba(18, 29, 51, 1) !important;
-  text-align: center !important;
-}
-.bro-text p:after{
-  display:block !important;
-  width: 100px !important;
-  height: 2px !important;
-  margin:10px auto 0 auto !important;
-}
-.bro-text p{
-  color: rgba(255, 255, 255, 1) !important;
-  margin-top: 30px !important;
-  text-transform: capitalize;
-  letter-spacing: 2px !important;
-  font-size: 30px !important;
-  line-height: 50px !important;
-  font-weight: 600 !important;
-}
-.bro:hover .bro-text{
-  opacity:1 !important 
-}
-@media screen and (max-width: 506px) {
-  .bro-text p:after{
-    margin: 5px auto !important;
-  }
-  .bro-text p {
-    font-size: 20px !important;
-    margin-top: 20px !important;
-  }
-}
-
-@media screen and (max-width: 506px) {
-  .bro-text p:after{
-    margin: 3px auto !important;
-  }
-  .bro-text p {
-    font-size: 25px !important;
-    margin-top: 19px !important;
-  }
-}
-
-.port {
-  border-radius: 5px !important;
-  margin-top: 15px !important;
-  cursor: pointer !important;
-  z-index: 10000;
-}
-.port:hover {
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-name: Floating2;
-  animation-timing-function: ease-in-out;
-  z-index: 10000;
-}
-.port h4 {
-  background: rgba(18, 29, 51, 0.7);
-  text-align: center;
-  border-radius: 0 0 3px 3px !important;
-  box-shadow: 0 0 0 0.7px rgba(255, 255, 255, 0.3) !important;
-}
-.port h4 a {
-  color: rgba(255, 255, 255, 1) !important;
-  font-size: 30px;
-  line-height: 37px !important;
-  font-weight: 600 !important;
-  text-transform: uppercase !important;
-  letter-spacing: 4px !important;
-}
-.port a img {
-  width: 100% !important;
-  height: 177px;
-  box-shadow: 0 0 0 0.7px rgba(255, 255, 255, 0.5) !important;
-}
-@media screen and (min-width: 996px) {
-  .port {
-    border-radius: 0;
-    width: 85% !important;
-    margin: 10px 7.5% 30px !important;
-  }
+#logs-invoice {
+    padding: 0px 10px !important;
+    height: 100vh !important;
 }
 @media screen and (max-width: 821px) {
-  .port {
-    margin: 35px 15px !important;
-  }
-  .port a img {
-    height: 250px;
-  }
-  .port h4 a {
-    font-size: 25px;
-  }
+    #logs-invoice {
+        padding: 0px 10px !important;
+        height: 100vh !important;
+    }
 }
-@media screen and (max-width: 769px) {
-  .port {
-    margin: 20px 15px !important;
-  }
-  .port a img {
-    height: 230px;
-  }
-  .port h4 a {
-    font-size: 23px;
-  }
+
+#logs-invoice div {
+    overflow: hidden !important;
 }
-@media screen and (max-width: 506px) {
-  .port {
-    margin: 15px 0px !important;
-  }
-  .port a img {
-    height: 138px;
-  }
-  .port h4 a {
-    font-size: 25px;
-    line-height: 28px !important;
-    letter-spacing: 3px !important;
-  }
-}
-@media screen and (max-width: 420px) {
-  .port {
-    margin: 21px 0px !important;
-  }
-  .port a img {
-    height: 136px;
-  }
-  .port h4 a {
-    font-size: 24px;
-    padding: 6px 0 !important;
-  }
-}
-@media screen and (max-width: 396px) {
-  .port {
-    margin: 21px 0px !important;
-  }
-  .port a img {
-    height: 129px;
-  }
-  .port h4 a {
-    font-size: 23px;
-    padding: 5px 0 !important;
-  }
-}
-@media screen and (max-width: 370px) {
-  .port {
-    margin: 17px 0px !important;
-  }
-  .port a img {
-    height: 116px;
-  }
-  .port h4 a {
-    font-size: 22px;
-    padding: 4px 0 !important;
-  }
+
+#logs-invoice .section-heading h4 {
+    color: #121d33;
 }
 
 
-.border{
-  border: 2px solid rgba(135, 206, 235, 0.1) !important;
-  margin: 20px auto !important;
+#my-invoice {
+    margin: 3px !important;
+    padding: 0px !important;
+    width: 100% !important;
+}
+#invoice-div {
+    margin-top: 1vh;
+}
+@media screen and (min-width: 1370px) {
+    #invoice-div {
+        margin-top: 3vh;
+    }
+}
+@media screen and (max-width: 821px) {
+    #invoice-div {
+        margin-top: 5vh;
+    }
+}
+@media screen and (max-width: 500px) {
+    #invoice-div {
+        margin-top: 5vh;
+    }
+}
+@media screen and (max-width: 381px) {
+    #invoice-div {
+        margin-top: 3vh;
+    }
 }
 
+#invoice-div p {
+    margin: 15px auto !important;
+    font-size: 23px !important;
+    line-height: 65px !important;
+}
 
+@media screen and (min-width: 1370px) {
+    #invoice-div p {
+        font-size: 24px !important;
+        line-height: 68px !important;
+    }
+}
+#invoice-div p span {
+    font-weight: 600;
+}
 @media screen and (max-width: 574px) {
-  .border {
-    margin: 75px auto !important;
-    border: 1.95px solid rgba(135, 206, 235, 0.2) !important;
+    #invoice-div p {
+        font-size: 20.5px !important;
+        line-height: 62px !important;
+    }
+}
+
+@media screen and (max-width: 380px) {
+    #invoice-div p {
+        font-size: 20px !important;
+        line-height: 59px !important;
+    }
+}
+
+#my-invoice span {
+    font-weight: 600;
+}
+
+
+#invoice-body-div {
+    margin: 3px !important;
+    background: rgba(255, 255, 255, 0.7) !important;
+}
+#invoice-body-div p {
+    font-weight: 500 !important;
+}
+@media (min-width: 802px) {
+	.col-lg-5 {
+		-ms-flex: 0 0 33%;
+		flex: 0 0 33%;
+		max-width: 33%;
    }
 }
-#clients {
-  position: fixed !important;
-  bottom: 4px !important;
+@media (max-width: 500px)  {
+    .col-12 {
+      -ms-flex:0 0 94%;
+      flex:0 0 94%;
+      max-width: 94%;
+    }  
+}
+@media (max-width: 400px)  {
+    .col-12 {
+      -ms-flex:0 0 96%;
+      flex:0 0 96%;
+      max-width: 96%;
+    }  
+}
+
+#my-invoice {
+    border: 5px solid rgba(22, 160, 134, 0.5) !important;
+    background: rgb(19, 42, 60) !important;
+}
+  
+#my-invoice p {
+    color: rgb(19, 58, 69) !important;
 }
 
 
-
-#style-switcher{
-  top: 30%;
+.nohr {
+    border: 0.7px solid rgba(22, 160, 134, 0.3);
+    padding: 0 !important;
+    margin: 0 !important;
 }
-@media (max-width:592px){
-  #style-switcher{
-      top: 15%;
+
+@media screen and (min-width: 1370px) {
+    .nohr {
+        padding: 0 !important;
+        margin: 10px !important;
+    }
+}
+
+.confirm-div {
+    cursor: pointer !important;
+    display: inline-block !important;
+}
+#inputLife {
+  border-radius: 0.1px !important;
+  font-weight: 600 !important;
+  text-align: center;
+  width: 99% !important;
+
+  padding: 0 12px !important;
+  height: 93.5% !important;
+  margin: auto auto !important;
+  letter-spacing: 2.2px !important;
+  align-items: center !important;
+  font-size: 24px !important;
+  box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.7) !important;
+}
+#inputLife::placeholder {
+  letter-spacing: 1.1px !important;
+}
+
+@media screen and (max-width: 767px) {
+  #inputLife::placeholder {
+      letter-spacing: 0.7px !important;
+  }
+  #inputLife {
+      padding: 0 7px !important;
+      letter-spacing: 2px !important;
+      align-items: center !important;
+      font-size: 22.5px !important;
+      height: 95% !important;
   }
 }
 
-blink {
-  top: 30px;
-  right: -15px;
-}
+
+#the-life {
+    display: flex !important;
+    width: 91% !important;
+    height: 58px !important;
+    margin: 10px auto -10px !important;
+  
+    background: rgba(255, 255, 255, 0.7) !important;
+    box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.7) !important;
+    border-radius: 0.3px !important;
+  }
+
+  p#wild, 
+  p#would {
+    color: lightcyan !important;
+  }
+
+  span#in-span {
+    color: rgb(139, 209, 68) !important;
+  }
+
 
 #email-phone {
-  margin-top: 13px !important;
-  margin-bottom: 13px !important;
+  margin-top: 20px !important;
+  margin-bottom: 10px !important;
   cursor: pointer !important;
-  padding-left: 13px !important;
-  padding-right: 13px !important;
-  font-size: 23.2px !important;
-  letter-spacing: 1.3px !important;
+  padding: 9px 13px !important;
+  font-size: 25px !important;
+  letter-spacing: 1.8px !important;
 }
+#email-phone img {
+    border-radius: 0 !important;
+    height: 33px !important;
+    width: 33px !important;
+}
+
+@media screen and (max-width: 767px) {
+    #email-phone {
+        margin-top: 20px !important;
+        margin-bottom: 10px !important;
+        cursor: pointer !important;
+        padding: 8px 12px !important;
+        font-size: 24px !important;
+        letter-spacing: 1.5px !important;  
+    }
+}
+
+@media screen and (max-width: 821px) {
+    #clients {
+        position: fixed !important;
+        bottom: 3px !important;
+    }
+}
+
 
