--- a/public/css/styles-2.css
+++ b/public/css/styles-2.css
@@ -249,7 +249,7 @@ blink {
 .owl-carousel .owl-nav button.owl-prev {
   border: 1.4px solid rgba(3, 169, 245, 1);
 }
-
+#uploadModal .modal-content,
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #exampleModal .modal-content {
@@ -273,6 +273,7 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
+#tiket,
 #copy-text,
 .money {
   background: rgb(201, 237, 253) !important;
@@ -288,7 +289,7 @@ blink {
 .account {
   border: 1.4px solid rgba(3, 169, 245, 0.3);
 }
-
+#uploadModal .modal-header .close img,
 #vpnModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
@@ -329,6 +330,7 @@ span#uidz,
 span#uids{
   color: rgb(129, 212, 250) !important;
 }
+#tiket,
 #showtoasts {
   border: 2.2px solid rgba(3, 169, 245, 0.7);
 }
