--- a/public/css/styles-3.css
+++ b/public/css/styles-3.css
@@ -246,6 +246,7 @@ blink {
 .owl-carousel .owl-nav button.owl-prev {
   border: 1.4px solid rgba(0, 115, 173, 1);
 }
+#uploadModal .modal-content,
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #exampleModal .modal-content {
@@ -269,6 +270,7 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
+#tiket,
 #copy-text,
 .money {
   background: rgb(200, 225, 237) !important;
@@ -284,6 +286,7 @@ blink {
 .account {
   border: 1.4px solid rgba(0, 115, 173, 0.3);
 }
+#uploadModal .modal-header .close img,
 #vpnModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
@@ -324,6 +327,7 @@ span#uidz,
 span#uids {
   color: rgb(128, 185, 214) !important;
 }
+#tiket,
 #showtoasts {
   border: 2.2px solid rgba(0, 115, 173, 0.7);
 }
