--- a/public/css/styles-6.css
+++ b/public/css/styles-6.css
@@ -251,7 +251,7 @@ blink {
 .owl-carousel .owl-nav button.owl-prev {
   border: 1.4px solid rgba(208, 173, 85, 1);
 }
-
+#uploadModal .modal-content,
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #exampleModal .modal-content {
@@ -275,6 +275,7 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
+#tiket,
 #copy-text,
 .money {
   background: rgb(245, 237, 219) !important;
@@ -290,7 +291,7 @@ blink {
 .account {
   border: 1.4px solid rgba(208, 173, 85, 0.3);
 }
-
+#uploadModal .modal-header .close img,
 #vpnModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
@@ -331,6 +332,7 @@ span#uidz,
 span#uids {
   color: rgb(232, 214, 170) !important;
 }
+#tiket,
 #showtoasts {
   border: 2.2px solid rgba(208, 173, 85, 0.7);
 }
