--- a/public/css/styles-4.css
+++ b/public/css/styles-4.css
@@ -247,6 +247,7 @@ blink {
 .owl-carousel .owl-nav button.owl-prev {
   border: 1.4px solid rgba(71, 88, 143, 1);
 }
+#uploadModal .modal-content,
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #exampleModal .modal-content {
@@ -270,6 +271,7 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
+#tiket,
 #copy-text,
 .money {
   background: rgb(216, 219, 231) !important;
@@ -285,7 +287,7 @@ blink {
 .account {
   border: 1.4px solid rgba(71, 88, 143, 0.3);
 }
-
+#uploadModal .modal-header .close img,
 #vpnModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
@@ -326,6 +328,7 @@ span#uidz,
 span#uids {
   color: rgb(163, 172, 199) !important;
 }
+#tiket,
 #showtoasts {
   border: 2.2px solid rgba(71, 88, 143, 0.7);
 }
