--- a/public/css/styles-8.css
+++ b/public/css/styles-8.css
@@ -250,7 +250,7 @@ blink {
 .owl-carousel .owl-nav button.owl-prev {
   border: 1.4px solid rgba(22, 160, 134, 1);
 }
-
+#uploadModal .modal-content,
 #vpnModal .modal-content,
 #profileModal .modal-content,
 #exampleModal .modal-content {
@@ -273,6 +273,7 @@ blink {
 .custom-file-label::after,
 .navbar-nav li.nav-small a,
 #showtoasts,
+#tiket,
 #copy-text,
 .money {
   background: rgb(205, 235, 229) !important;
@@ -288,7 +289,7 @@ blink {
 .account {
   border: 1.4px solid rgba(22, 160, 134, 0.3);
 }
-
+#uploadModal .modal-header .close img,
 #vpnModal .modal-header .close img,
 #exampleModal .modal-header .close img,
 .btn-remove {
@@ -329,6 +330,7 @@ span#uidz,
 span#uids {
   color: rgb(139, 208, 195) !important;
 }
+#tiket,
 #showtoasts {
   border: 2.2px solid rgba(22, 160, 134, 0.7);
 }
